2012-02-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-usage-test, registry-persistence-test): Move to
	tests/gnustest-registry.el.

	* gnus-registry.el (gnus-registry-misc-test)
	(gnus-registry-usage-test): Move to tests/gnustest-registry.el.

	* tests/gnustest-registry.el: New file with the registry and
	gnus-registry ERT tests.

2012-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message): Make
	gnus-summary-resend-message-insert-gcc be last item in
	message-header-setup-hook.

2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnfolder.el (nnfolder-marks-directory, nnfolder-marks-is-evil)
	(nnfolder-marks, nnfolder-marks-file-suffix, nnfolder-marks-modtime):
	Remove.
	(nnfolder-open-server): Don't use marks.
	(nnfolder-request-delete-group): Ditto.
	(nnfolder-request-rename-group): Ditto.
	(nnfolder-request-set-mark, nnfolder-request-marks)
	(nnfolder-group-marks-pathname, nnfolder-marks-changed-p)
	(nnfolder-save-marks, nnfolder-open-marks): Remove.

	* nnml.el (nnml-marks-is-evil, nnml-marks-file-name, nnml-marks)
	(nnml-marks-modtime): Remove.
	(nnml-request-delete-group): Don't use marks.
	(nnml-request-rename-group): Ditto.
	(nnml-request-set-mark, nnml-request-marks, nnml-marks-changed-p)
	(nnml-save-marks, nnml-open-marks): Remove.

	* nntp.el (nntp-marks-is-evil, nntp-marks-file-name, nntp-marks)
	(nntp-marks-modtime, nntp-marks-directory, nntp-request-set-mark)
	(nntp-request-marks, nntp-marks-directory, nntp-marks-changed-p)
	(nntp-save-marks, nntp-open-marks, nntp-possibly-create-directory)
	(nntp-server-to-method-cache): Remove.

	* shr.el (shr-rescale-image): Allow viewing large images.
	(shr-rescale-image): Fix wrong merge.

2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-record-commands): New variable.
	(nnimap-log-command): Use it.
	(nnimap-make-process-buffer): Add a space to the process buffer.
	(nnimap-transform-headers): Don't bug out on header lines containing